# ADMAX

./: .gitmodules  CMakeLists.txt  README.md  config.json
DocMngr/: CMakeLists.txt  DocMngr_de.ts  DocMngr_en.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mrpccli.cpp  mrpccli.h  passwd.ui  passwdDlg.cpp  passwdDlg.h  viewer.cpp  viewer.h  viewer.ui
Server/: CMakeLists.txt  filestore.cpp  filestore.h  mrpc.h  mrpcclient.cpp  mrpcsrv.cpp
